--- a/style.css
+++ b/style.css
@@ -23,14 +23,95 @@
     color: white;
 }
 
-main{
+.main{
     width: 100vw;
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
 }
 
 .main-image{
     width: 70vw;
+}
+
+.main-image-bottom{
+    width: 70vw;
+    margin-top: 5px;
     border-bottom: 15px #f05334 solid;
+}
+
+.main-text{
+    width: 70vw; 
+    line-height: 4rem;
+}
+
+.main-text h1{
+    text-align: center;
+    color: #f05334;
+}
+
+.main-text h2{
+    color: #f05334;
+}
+
+.prepare{
+    width: 100vw;
+    background-color: #f05334;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 30px;
+}
+
+.prepare h1{
+    color: white;
+    text-align: center;
+    margin-bottom: 30px;
+}
+
+.video{
+    
+    width: 70vw;
+    height: 630px;
+}
+
+.main-footer{
+    margin-top: 60px;
+    width: 70vw;
+    margin-bottom: 60px;
+
+}
+
+.main-footer h1{
+    text-align: center;
+}
+
+.main-footer form{
+    width: 70vw;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.main-footer form input[type="email"]{
+    color: black;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 1px solid #f05334;
+    width: 150px;
+    height: 40px;
+    outline: none;
+}
+
+.main-footer form input[type="submit"]{
+    color: white;
+    background-color: #f05334;
+    width: 70px;
+    border: none;
+    height: 40px;
+    margin-left: 6px;
+    box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
 }
