--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    position: static;
+    position: fixed;
 }
 
 .nav-logo{
@@ -114,4 +114,20 @@
     height: 40px;
     margin-left: 6px;
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19);
+}
+
+.footer{
+    background-color: black;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100vw;
+    height: 50px;
+}
+
+.footer p{
+    text-align: center;
+    text-decoration: underline;
+    color: white;
 }
